# coin-converter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/versions/: 7d6681aecd59_add_product_table.py  f98009117c2c_add_categories_table.py
app/routes/: category_routes.py  product_routes.py  user_routes.py
app/schemas/: base.py  category.py  product.py  user.py
app/tests/: conftest.py
app/tests/routes/: test_category_route.py  test_product_route.py  test_user_routes.py
app/tests/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/tests/use_cases/: test_categoy_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
tests/: conftest.py
tests/use_cases/: test_categoy_use_cases.py
